# SinClient

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  pom.xml
src/main/cpp/: main.cpp
src/main/cpp/sin/: SinService.cpp  SinService.h  SocketClient.cpp  SocketClient.h
src/main/docker/: Dockerfile.jvm  Dockerfile.legacy-jar  Dockerfile.native  Dockerfile.native-micro
src/main/java/com/example/client/: CustomExcpetion.java  LifeCycleEvents.java  SinClient.java  SinSocket.java
src/main/java/com/example/client/dtos/: Msg.java  MsgType.java  Strategy.java  Task.java
src/main/java/com/example/client/id/: IdClient.java
src/main/java/com/example/client/sin/: SinClient.java  SinService.java  SinSocket.java  ThrowableRunnable.java
src/main/java/com/example/client/strategy/: Strategy.java  StrategyClient.java
src/main/resources/: application.properties
